<resources>
    <string name="app_name">snwnw</string>
    <string name="enter">لديك حساب؟ دخول</string>
    <string name="enter_reg">ليس لديك حساب؟تسجيل</string>
    <string name="login">دخول</string>
    <string name="email">البريد الالكترونى</string>
    <string name="password">كلمة المرور</string>
    <string name="appear_password">اظهار كلمة المرور</string>
    <string name="forget_password">نسيت كلمة السر</string>
    <string name="register">تسجيل</string>
    <string name="first_name">الاسم الأول</string>
    <string name="name">الاسم</string>
    <string name="your_opinion">نص الرأى</string>
    <string name="last_name">الاسم الأخير</string>
    <string name="confirm_password">تأكيد الرقم السرى</string>
    <string name="register_new_user">تسجيل مستخدم جديد</string>

    <string name="city">المدينة</string>
    <string name="mother_city">البلد الأم</string>
    <string name="user_password">كلمة المرور</string>
    <string name="change_pass">تغيير كلمة المرور</string>
    <string name="reset_password">اعادة تعيين\n كلمة المرور</string>
    <string name="confirmation_code">الرقم التأكيدى</string>
    <string name="re_confirmation_code">اعادة ارسال الرقم التأكيدى</string>
    <string name="submit">تأكيد</string>
    <string name="send">ارسال</string>
    <string name="loadmore">عرض المزيد</string>
    <string name="country">بلد المنشأ</string>
    <string name="new_password">كلمة المرور الجديدة</string>
    <string name="new_password_confirm">تأكيد كلمة المرور</string>
    <string name="email_address">البريد الالكترونى</string>
    <string name="pass_not_equal">كلمتان السر غير متطابقتان </string>
    <string name="enter_code">ادخل الكود</string>
    <string name="thanks_for_upload">شكرا لك ..تم اضافة المكان بنجاح بانتظار تأكيد الأدمن</string>
    <string name="save">حفظ</string>
    <!-- Error messages -->
    <string name="user_name_error">من فضلك ادخل الاسم</string>
    <string name="last_name_error">من فضلك ادخل الاسم</string>
    <string name="email_error">من فضلك ادخل البريد الالكترونى</string>
    <string name="pass_error">من فضلك ادخل كلمة السر</string>
    <string name="confirmpass_error">من فضلك ادخل تأكيد كلمة السر</string>
    <string name="equalpass_error">كلمتان السر غير متطابقتان</string>
    <string name="network_error">بالرجاء التأكد من اتصالك بالانترنت واعد المحاولة</string>
    <string name="navigation_drawer_close"></string>
    <string name="title_activity_test_acitivty">testAcitivty</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="ic_home">الرئيسية</string>
    <string name="ic_myfave">قائمتى</string>
    <string name="ic_search">بحث</string>
    <string name="ic_add">عروض</string>
    <string name="ic_profile">صفحتى</string>
    <string name="searchfor">الى أين تريد أن تذهب</string>
    <string name="search_in_my_list">ابحث أسرع عن المكان الذى تريد</string>

    <string name="upload_imgs">رفع صور</string>
    <string name="full_name">الاسم بالكامل</string>
    <string name="email_name">البريد الالكترونى</string>
    <string name="phone_name">رقم الموبايل</string>
    <string name="address_name">العنوان</string>
    <string name="job_name">الوظيفة</string>
    <string name="add_place">أضف مكان</string>
    <string name="place_name">اسم المكان</string>
    <string name="place">الموقع</string>
    <string name="religon">الديانة</string>
    <string name="gender">النوع</string>
    <string name="type">نوع النشاط</string>

    <string name="mobile_number">رقم المحمول</string>
    <string name="add">أضـف</string>

    <string name="fb_login">تسجيل بحساب facebook</string>
    <string name="gmail_login">تسجيل بحساب Gmail</string>
    <string name="side_add">أضف مكان</string>
    <string name="evend_add">أضف حدث</string>
    <string name="side_search">سجل البحث</string>
    <string name="side_fav">الأماكن المفضلة</string>
    <string name="side_my_places">الأماكن المضافة</string>
    <string name="not_found">لايوجد</string>
    <string name="email_hint">البريد الالكترونى</string>
    <string name="side_quest">الأسئلة الشائعة</string>
    <string name="side_feedback">ارسال feedback</string>
    <string name="side_share">دعوة الأصدقاء</string>
    <string name="side_settings">الاعدادات</string>

    <string name="side_exit">خروج</string>
    <string name="add_to_fav">أضف الى قائمتى</string>
    <string name="remove_from_fav">حذف من قائمتى</string>
    <string name="no_items">لا توجد أماكن مضافة</string>
    <string name="send_opinion">ارسال رأى</string>
    <string name="FQA_Quests">الأسئلة الشائعة</string>
    <string name="new_quest">لدى سؤال آخر</string>
    <string name="privacy_policy">سياسة الخصوصية</string>
    <string name="language">اللغة</string>
    <string name="arabic">العربية</string>
    <string name="notification">الاشعارات</string>
    <string name="thanks">شكرا على حرصكم للتواصل معنا\nلتطوير مانقدمة لكم </string>
    <string name="mobile">التليفون</string>
    <string name="current_password">كلمة السر الحالية</string>
    <string name="verify_account">تفعيل الحساب</string>
    <string name="edit_pass">تعديل كلمة المرور</string>
    <string name="edit">تعديل</string>
    <string name="search">بحث</string>
    <string name="email_lbl_txt">ادخل البريد الالكترونى الذى قمت بالتسجيل به سابقا سنقوم بارسال البريد الالكترونى يحتوى على رابط الاعادة كلمة المرور الخاصة به</string>
    <string name="profile_1_data">البيانات الشخصية</string>
    <string name="profile_2_myfav">الاهتمامات</string>
    <string name="profie_3_acconut">حسابى</string>
    <string name="profile_4_logout">تسجيل خروج</string>
    <string name="search_empty">لا توجد نتائج بحث </string>


    <string name="facebook_app_id">331504747646550</string>
    <string name="fb_login_protocol_scheme">fb331504747646550</string>

</resources>
