<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_preview">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="120dp"
        android:src="@drawable/logo_preview"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_60"
        android:id="@+id/imageView2" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/button_facebook_login"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/register_btn"
        android:layout_below="@+id/imageView2"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:visibility="gone"
        />

    <Button
        android:id="@+id/facebook_btn"
        android:layout_width="250dp"
        android:layout_height="@dimen/margin_40"
        android:layout_alignStart="@+id/google_btn_"
        android:layout_centerVertical="true"
        android:background="@drawable/fb_bg"
        android:drawableLeft="@drawable/facebook"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/fb_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/margin_16" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"

         />


    <com.google.android.gms.common.SignInButton
        android:id="@+id/google_btn"
        android:layout_width="250dp"
        android:layout_height="@dimen/margin_40"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/gmail_bg"
        android:text="@string/gmail_login"
        android:textColor="@color/white"
        android:textSize="@dimen/margin_16"
        android:visibility="gone" />

    <Button

        android:id="@+id/google_btn_"
        android:layout_width="250dp"
        android:layout_height="@dimen/margin_40"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"

        android:drawableLeft="@drawable/google_plus"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/google_back"
        android:text="@string/gmail_login"
        android:layout_below="@id/facebook_btn"
        android:layout_marginTop="5dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:textAllCaps="false"
        android:onClick="googleSignIn"
        android:textColor="#fff"
        android:textSize="15sp"/>

    <Button
        android:id="@+id/register_btn"
        android:layout_width="250dp"
        android:layout_height="@dimen/margin_40"
        android:layout_alignStart="@+id/google_btn_"
        android:layout_marginBottom="31dp"
        android:background="@drawable/roundedbutton"
        android:text="@string/register_new_user"
        android:layout_below="@id/google_btn_"
        android:textColor="@color/white"
        android:textSize="@dimen/margin_16" />
    <com.snwnw.snwnw.presentation.ui.views.English_Textview
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_120"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textSize="@dimen/margin_16"
        android:id="@+id/go"
        />
</RelativeLayout>