<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/toolbar"></include>
    </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <com.snwnw.snwnw.presentation.ui.views.English_Textview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_30"
                android:text="@string/send_opinion"
                android:textColor="@color/lila"
                android:textSize="@dimen/text_size_26"
                android:textStyle="bold"
                android:id="@+id/headtxt"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                />
            <com.snwnw.snwnw.presentation.ui.views.English_Textview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/headtxt"
                android:textColor="@color/dark_grey"
                android:text="@string/thanks"
                android:layout_marginTop="@dimen/margin_10"
                android:layout_centerHorizontal="true"
                android:id="@+id/thanks"
                />
            <com.snwnw.snwnw.presentation.ui.views.English_Textview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_20"
                android:textSize="@dimen/text_size_16"
                android:text="@string/name"
                android:id="@+id/name_view"
                android:layout_below="@+id/thanks"
                android:textColor="@color/lila"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_30"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal"
                android:id="@+id/confirmation_layout"
                android:layout_centerInParent="true"
                android:layout_marginRight="@dimen/margin_30"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_below="@+id/name_view"
                >
                <com.snwnw.snwnw.presentation.ui.views.English_EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_40"
                    android:background="@drawable/round_edit_txt"
                    android:id="@+id/enter_your_name"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    />
            </LinearLayout>

            <com.snwnw.snwnw.presentation.ui.views.English_Textview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_20"
                android:textSize="@dimen/text_size_16"
                android:text="@string/email"
                android:id="@+id/email_view"
                android:layout_below="@+id/confirmation_layout"
                android:textColor="@color/lila"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_30"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal"
                android:id="@+id/email_layout"
                android:layout_centerInParent="true"
                android:layout_marginRight="@dimen/margin_30"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_below="@+id/email_view"
                >
                <com.snwnw.snwnw.presentation.ui.views.English_EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_40"
                    android:background="@drawable/round_edit_txt"
                    android:id="@+id/enter_your_email"
                    android:gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    />
            </LinearLayout>


            <com.snwnw.snwnw.presentation.ui.views.English_Textview
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_20"
                android:textSize="@dimen/text_size_16"
                android:text="@string/your_opinion"
                android:id="@+id/opinion_view"
                android:layout_below="@+id/email_layout"
                android:textColor="@color/lila"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/margin_30"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_10"
                android:orientation="horizontal"
                android:id="@+id/opinion_layout"
                android:layout_centerInParent="true"
                android:layout_marginRight="@dimen/margin_30"
                android:layout_marginLeft="@dimen/margin_30"
                android:layout_below="@+id/opinion_view"
                >
                <com.snwnw.snwnw.presentation.ui.views.English_EditText
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_120"
                    android:padding="10dp"
                    android:background="@drawable/round_edit_txt"
                    android:id="@+id/enter_your_opinion"
                    android:gravity="top|right"
                    />
            </LinearLayout>

            <com.snwnw.snwnw.presentation.ui.views.English_Button
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:textColor="@color/white"
                android:text="@string/send"
                android:textSize="@dimen/margin_16"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_40"
                android:textStyle="bold"
                android:layout_below="@+id/opinion_layout"
                android:gravity="center"
                android:padding="@dimen/margin_10"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/roundedbutton"
                android:layout_marginBottom="@dimen/margin_20"
                android:id="@+id/send_btn"
                />


        </RelativeLayout>
        </ScrollView>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>