<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <include layout="@layout/toolbar"></include>
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/toolbar_layout"
            android:fillViewport="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <com.snwnw.snwnw.presentation.ui.views.English_Textview
                    android:id="@+id/headtxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_30"
                    android:gravity="center_horizontal"
                    android:text="@string/forget_password"
                    android:textColor="@color/lila"
                    android:textSize="@dimen/text_size_22"
                    android:textStyle="bold" />

                <com.snwnw.snwnw.presentation.ui.views.English_Textview
                    android:id="@+id/confirmation_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignEnd="@+id/confirmation_layout"
                    android:layout_below="@+id/headtxt"
                    android:layout_marginEnd="14dp"
                    android:layout_marginTop="40dp"
                    android:text="@string/email_address"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_size_16" />

                <LinearLayout
                    android:id="@+id/confirmation_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginLeft="@dimen/margin_30"
                    android:layout_marginRight="@dimen/margin_30"
                    android:layout_marginTop="@dimen/margin_10"
                    android:orientation="horizontal"
                    android:layout_below="@+id/confirmation_code"
                    >

                    <com.snwnw.snwnw.presentation.ui.views.English_EditText
                        android:id="@+id/enter_your_email"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/margin_30"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:layout_margin="@dimen/margin_5"
                        android:background="@drawable/round_edit_txt"
                        android:gravity="center"
                         />
                </LinearLayout>

                <com.snwnw.snwnw.presentation.ui.views.English_Textview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/confirmation_layout"
                    android:layout_marginEnd="14dp"
                    android:layout_marginTop="@dimen/margin_10"
                    android:text="@string/email_lbl_txt"
                    android:textStyle="bold"
                    android:layout_alignRight="@+id/confirmation_layout"
                    android:layout_alignLeft="@+id/confirmation_layout"
                    android:textSize="@dimen/text_size_14" />

                <com.snwnw.snwnw.presentation.ui.views.English_Button
                    android:id="@+id/send_email_btn"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/confirmation_layout"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/margin_20"
                    android:layout_marginLeft="@dimen/margin_20"
                    android:layout_marginRight="@dimen/margin_20"
                    android:layout_marginTop="@dimen/margin_100"
                    android:background="@drawable/btn_bg"
                    android:gravity="center"
                    android:padding="@dimen/margin_10"
                    android:text="@string/send"
                    android:textColor="@color/white"
                    android:textSize="@dimen/margin_16"
                    android:textStyle="bold" />

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</android.support.constraint.ConstraintLayout>