<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/toolbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/toolbar">
        </include>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_layout"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/top_header"
                android:layout_width="match_parent"
                android:layout_height="@dimen/margin_100">

                <com.snwnw.snwnw.presentation.ui.views.English_Textview
                    android:id="@+id/splitter"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/color2"
                    android:textColor="@color/lila"
                    android:textSize="@dimen/text_size_20"
                    android:textStyle="bold"
                    android:layout_alignParentBottom="true"
                    />

                <LinearLayout
                    android:id="@+id/header"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:orientation="horizontal"
                    android:layout_centerVertical="true"

                    >


                    <com.snwnw.snwnw.presentation.ui.views.English_Textview
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/lila"
                        android:textSize="@dimen/text_size_16"
                        android:layout_toLeftOf="@+id/header_img"
                        android:text="@string/profie_3_acconut"

                        android:layout_gravity="center_vertical"
                        />

                    <ImageView
                        android:id="@+id/header_img"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_margin="@dimen/margin_10"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/ic_account" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/id_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignTop="@+id/img_layout"
                    android:layout_marginLeft="@dimen/margin_50"
                    android:src="@drawable/ic_edit"
                    android:visibility="gone" />

                <com.snwnw.snwnw.presentation.ui.views.English_Textview
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/splitter"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_margin="@dimen/margin_5"
                    android:text="@string/first_name"
                    android:textColor="@color/lila"
                    android:textSize="@dimen/text_size_20"
                    android:textStyle="bold"
                    android:visibility="gone" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
            <com.snwnw.snwnw.presentation.ui.views.English_Textview
                android:id="@+id/data_lbl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_pass"
                android:textColor="@color/lila"
                android:textSize="@dimen/text_size_20"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_20"

                />

                <com.snwnw.snwnw.presentation.ui.views.English_Button
                    android:id="@+id/edt_btn"
                    android:layout_width="@dimen/margin_100"
                    android:layout_height="40dp"
                    android:layout_below="@+id/data_lbl"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_20"
                    android:background="@drawable/gradient_orange_color"
                    android:gravity="center"
                    android:padding="@dimen/margin_10"
                    android:text="@string/edit"
                    android:textColor="@color/white"
                    android:textSize="@dimen/margin_16"
                    android:textStyle="bold"
                    />

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>